Task #3330: Cross browser fix for the button-arrow alignment

--- a/_assets/styles/scss/01-base/_mixins.scss
+++ b/_assets/styles/scss/01-base/_mixins.scss
@@ -138,7 +138,17 @@
   @include button($background-color, $color);
 
   background-color: transparent;
-  padding: .75em 0 .75em 1.5em;
+  border: solid 2px $color;
+  border-radius: 0;
+  color: $color;
+  display: inline-block;
+  font-family: $copytext-font;
+  font-size: 1.25em;
+  height: 64px;
+  line-height: 60px;
+  padding: 0 90px 0 30px;
+  position: relative;
+  text-align: center;
   transition: background-color .2s ease-in-out, color .2s ease-in-out, border-color .2s ease-in-out;
 
   &::after {
@@ -147,10 +157,12 @@
     content: '\f105';
     font-family: FontAwesome;
     font-size: 1.25em;
-    margin-left: 1.2em;
-    margin-right: -1px;
-    padding: .9em 1.2em;
+    height: 60px;
+    position: absolute;
+    right: 0;
+    top: 0;
     transition: (background-color .2s ease-in-out);
+    width: 60px;
 
   }
 
